bluec-tests/tests/invalid/types_bool/missing_cast_parentheses.c
int main(void) {
    return _Bool 0;
}